# nlp-sentiment-classification

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: wake_up_app.yml
app/: streamlit_app.py
data/huggingface_cache/imdb/plain_text/0.0.0/e6281661ce1c48d982bc483cf8a173c1bbeb5d31/: dataset_info.json
data/raw/: README.md
models/: classifier.pt
outputs/: experiments.json  lstm_ablation_analysis.md  metrics.json  test_set_results.json
scripts/: evaluate_on_test.py  find_demo_examples.py  generate_readme_plots.py  sweep_bert.py  sweep_l2.py  sweep_lstm_v2.py  sweep_lstm_vocab.py  sweep_min_count.py  sweep_min_count_v2.py  sweep_tfidf.py  train_bert.py  train_champion_bert.py  train_champion_lstm.py  train_champion_tfidf.py  train_lstm.py  train_model.py  upload_to_hf_hub.py
src/nlp_sentiment/: bert_data.py  bert_model.py  config.py  data.py  evaluate.py  glove_utils.py  hf_loader.py  interpretability.py  lstm_data.py  models.py  predict.py  predict_multi.py  preprocessor.py  train.py
tests/: test_predict.py  test_preprocessor.py
