[project]
name = "nlp-sentiment-classification"
version = "0.1.0"
description = "Classification de sentiments de critiques de films — comparaison de modèles n-grammes (régression logistique) et LSTM en PyTorch"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Sandra Desmair Fogang Lontouo" }
]
keywords = ["nlp", "sentiment-analysis", "pytorch", "lstm", "machine-learning"]

# Dépendances principales (nécessaires pour faire tourner le projet)
dependencies = [
    "torch>=2.2.0",
    "nltk>=3.8.1",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "datasets>=2.18.0",
    "transformers>=4.40.0",
    "matplotlib>=3.8.0",
     "streamlit>=1.32.0",
     "plotly>=5.20.0",
]

[project.optional-dependencies]
# Dépendances pour le développement (notebooks, tests, lint)
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

# Dépendances pour le déploiement Streamlit (Phase 2)
app = [
    "streamlit>=1.36.0",
]

# Dépendances pour l'API FastAPI (Phase 3)
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nlp_sentiment"]

# Configuration de Ruff (linter + formatter moderne)
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

# Configuration de Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
